# distill

./: .env.example  .gitignore  CONTRIBUTING.md  Cargo.toml  PLAN.md  README.md  docker-compose.yml  eval_set.jsonl.example
.githooks/: pre-commit
.github/workflows/: ci.yml  release.yml
distill-sdk/: Cargo.toml  README.md
distill-sdk/src/: client.rs  error.rs  lib.rs  types.rs
distill-sdk/tests/: e2e.rs
distill-server/: Cargo.toml
distill-server/migrations/: 001_create_users.sql  002_create_questions.sql  003_create_answers.sql  004_create_answer_edits.sql  005_create_ratings.sql  006_create_contradiction_flags.sql  007_create_deep_dives.sql  008_create_llm_cache.sql  009_create_config.sql  010_add_llm_feature_flags.sql  011_create_links_and_comments.sql  012_unique_contradiction_pair.sql  013_create_jobs.sql  014_user_llm_quotas.sql  015_embedding_model_tracking.sql  016_enable_rls.sql  017_embedding_version.sql  018_job_backoff.sql  019_create_tenants.sql  020_rater_context_config.sql  021_rrf_config.sql  022_answer_mode_opt_in.sql  023_threaded_discussions.sql  024_revision_body.sql  025_individual_answers.sql
distill-server/src/: config.rs  config_enums.rs  error.rs  jobs.rs  lib.rs  main.rs
distill-server/src/auth/: jwt.rs  middleware.rs  oauth.rs
distill-server/src/routes/: admin.rs  answers.rs  comments.rs  contradictions.rs  discussion_votes.rs  discussions.rs  graph.rs  links.rs  llm_cache.rs  mod.rs  questions.rs  ratings.rs  tags.rs  tenants.rs  wiki_answers.rs
distill-server/src/services/: answers.rs  questions.rs
distill-server/tests/: integration.rs
distill-server/tests/fixtures/: example.sql  seed.sql
distill-web/: README.md  package.json
distill-web/src/lib/: api.ts
distill-web/src/lib/components/: Markdown.svelte
distill-web/src/routes/: +layout.svelte  +page.svelte
distill-web/src/routes/admin/: +page.svelte
distill-web/src/routes/ask/: +page.svelte
distill-web/src/routes/login/: +page.svelte
distill-web/src/routes/questions/[id]/: +page.svelte
distill-web/src/routes/questions/[id]/edit/: +page.svelte
distill-web/src/routes/questions/[id]/history/: +page.svelte
distill-web/src/routes/search/: +page.svelte
distill-web/src/routes/tags/: +page.svelte
docs/: API.md  ARCHITECTURE.md  PLAN.md  TODO.md
docs/fixtures/: contradiction_eval.jsonl.example
