[package]
name = "distill-sdk"
version = "0.4.0"
edition = "2021"
license.workspace = true

[dependencies]
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2"
uuid = { version = "1", features = ["v4", "serde"] }

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
axum = "0.8"
distill-server = { path = "../distill-server" }
sqlx = { version = "0.9", features = ["runtime-tokio", "postgres"] }
dotenvy = "0.15"
